# Space-Combat-Game

./: CMakeLists.txt
dep/include/GLFW/: glfw3.h
src/: CMakeLists.txt  main.cpp
src/App/: App.cpp  App.h  CMakeLists.txt
src/Base/: Base.cpp  Base.h  CMakeLists.txt
src/Entity/: AiController.cpp  AiController.h  AiEntity.cpp  AiEntity.h  CMakeLists.txt  Entity.cpp  Entity.h  PhysicsObj.cpp  PhysicsObj.h  PlayerController.cpp  PlayerController.h  PlayerEntity.cpp  PlayerEntity.h
src/Gameloop/: CMakeLists.txt  Gameloop.cpp  Gameloop.h
src/LogicManager/: CMakeLists.txt  LogicManager.cpp  LogicManager.h
src/Physics/: CMakeLists.txt  PhysicsEngine.cpp  PhysicsEngine.h  PhysicsObj.cpp  PhysicsObj.h  PhysicsSolver.cpp  PhysicsSolver.h  RK4.cpp  RK4.h
src/Physics/Constraints/: ConstCollision.cpp  ConstCollision.h  ConstKineticEnergyTransfer.cpp  ConstKineticEnergyTransfer.h  Constraint.h
src/PhysicsSolver/: CMakeLists.txt  PhysicsSolver.cpp  PhysicsSolver.h
src/Renderer/: CMakeLists.txt  Color.h  Renderer.cpp  Renderer.h
src/Runtime/: CMakeLists.txt  Runtime.cpp  Runtime.h
src/Scene/: CMakeLists.txt  Scene.cpp  Scene.h
